# inm-prac

./: .gitignore  CMakeLists.txt  Matrix.hpp  MaxVol.ipynb  README.md  RSVD.ipynb  TT.ipynb  functions.cpp  functions.hpp  mCross.ipynb  main.cpp  mesh.cpp  mesh.h  stHOSVD.ipynb
4 sem. Matrix Tridiagonalization/: Matrix.cpp
4 sem. Matrix Tridiagonalization/fortran/: main.f90
4 sem. Matrix Tridiagonalization/lapack/: CMakeLists.txt
5 sem. BiCGstab/: CMakeLists.txt
5 sem. Matrix Tridiagonalization/: CMakeLists.txt
5 sem. Matrix Tridiagonalization/blas/: main.cpp
5 sem. Matrix Tridiagonalization/fortran/: CMakeLists.txt
5 sem. Matrix Tridiagonalization/lapack/: main.cpp
6 sem. BiCGstab/: CMakeLists.txt  Matrix.cpp  README.md  main.cpp  mpi.cpp  run_mpi.sh
6 sem. BiCGstab/include/: BiCGstab.hpp  BiCGstab.tpp  Matrix.hpp  Matrix.tpp
6 sem. Matrix Tridiagonalization/: Matrix.cpp
6 sem. svt INMOST/: main.cpp
6 sem. svt Sparskit/: CMakeLists.txt  README.md  main.f90
6 sem. svt/task 1. INMOST/: CMakeLists.txt
6 sem. svt/task 1. INMOST/doc/: preamble.tex  report.tex
6 sem. svt/task 1. Sparskit/doc/: report.toc
6 sem. svt/task 2. Mesh/: mesh.geo
6 sem. svt/task 3. Poisson/: errors.csv  struct_2k.vtk  struct_mesh.geo  unstruct_50k.vtk
blas/: CMakeLists.txt  blas.f90
fortran/: CMakeLists.txt  main.f90
lapack/: CMakeLists.txt  Matrix.hpp  main.cpp
mesh/: square1_16.vtk  square1_50.vtk
report/: README.md  report.tex
sem 5. Matrix Tridiagonalization/: Matrix.hpp  main.cpp  progressbar.h
sem 5. Matrix Tridiagonalization/fortran/: CMakeLists.txt
sem 5. Matrix Tridiagonalization/lapack/: lapack.f90
sem 6. BiCGstab/: Matrix.cpp  main.cpp  mpi.cpp
sem 6. SVT/task 1. INMOST/: README.md
sem 6. SVT/task 1. Sparskit/: CMakeLists.txt  README.md  main.f90
sem 6. SVT/task 1. Sparskit/doc/: report.aux  report.out  report.tex
sem 6. SVT/task 2. Mesh/: mesh.msh  mesh.vtk
sem 6. SVT/task 3. Poisson/: README.md  plot.ipynb  struct_0.2k.vtk  struct_32k.vtk  struct_8k.vtk  unstruct_0.2k.vtk  unstruct_3k.vtk  unstruct_k.vtk  unstruct_mesh.geo
sem 7. SVT/FDE/: CMakeLists.txt  README.md  functions.hpp  main.cpp
sem 7. SVT/FDE/mesh/: square1_28929.vtk
sem 7. SVT/FDM/: README.md  functions.cpp  functions.hpp  main.cpp
sem 7. SVT/FDM/mesh/: square1_20.vtk
sem 7. SVT/FVM/: functions.hpp
sem 7. SVT/FVM/mesh/: square1_1857.vtk  square1_20.vtk  square1_357.vtk  square1_4.vtk  square1_40.vtk  square1_5313.vtk  square1_7297.vtk  square1_98.vtk  square1_t1.vtk  square1_t2.vtk  square1_t3.vtk
sem 7. SVT/FVM/report/: report.tex
sem 7. SVT/non-stational/: CMakeLists.txt  functions.hpp  main.cpp
sem 7. SVT/non-stational/report/: README.md  report.tex
sem 8. Tensors/: ALS.ipynb  Tucker.ipynb
tex/: main.tex
